# beyond-python-smolagents

./: 360 sport solutions  =0.9.0  CLAUDE.md  CLI.md  NOTICE  OPTIMIZATION_SUMMARY.md  README.md  Sopa de leyras  commit_msg.txt  hacker-1  jp.json  pyproject.toml
.github/: copilot-instructions.md
bp-examples/: CONTEXT_EFFICIENT_TOOLS.md  agent-using-context-efficient-tools.md  context-efficient-tools-demo.py
bp-examples/cpp/: cpp-single-file-01.ipynb
bp-examples/java/: java-single-file-01.ipynb
bp-examples/pascal/: pascal-single-file-01.ipynb
bp-examples/php/: php-single-file-01.ipynb
bp-examples/scripts/: create-spec-cycles.py  document-code-cycles.py  mormot.md  mormot.py  run-agent-cycles.py
bp-examples/writing/: source_code_documentation_pascal.ipynb  vitamin-C-with-fast-solver-3-models-work-together.ipynb  vitamin-C-with-fast-solver.ipynb  vitamin-C.ipynb
docs/: CLAUDE.md  CLI.md  CONTEXT_EFFICIENT_EVOLUTIVE_SOLVER.md  SECURITY.md  compression-plan.md  compression.md
docs/source/ko/: _toctree.yml
docs/source/zh/: guided_tour.md
examples/: context_efficient_demo.py
src/bpsa/: __init__.py
src/smolagents/: __init__.py  agent_types.py  agents.py  bp_ad_infinitum.py  bp_browser.py  bp_cli.py  bp_compression.py  bp_copilot_tools.py  bp_diff_cli.py  bp_executors.py  bp_grep_cli.py  bp_loc_cli.py  bp_pack_cli.py  bp_pas_cli.py  bp_session.py  bp_sig_cli.py  bp_thinkers.py  bp_tools.py  bp_tools_browser.py  bp_tools_gui.py  bp_tools_image.py  bp_tools_tmux.py  bp_tree_cli.py  bp_unpack_cli.py  bp_utils.py  bp_utils_readable_compress.py  compression.py  default_tools.py  gradio_ui.py  mcp_client.py  memory.py  models.py  monitoring.py  remote_executors.py  tools.py  utils.py
src/smolagents/prompts/: code_agent.yaml  structured_code_agent.yaml  toolcalling_agent.yaml
tests/: test_bp_context_tools.py  test_bp_gui_tools.py  test_bp_image_tools.py  test_bp_load_image.py  test_bp_load_instructions.py  test_bp_session.py  test_bp_tools_tmux.py  test_bp_utils_readable_compress.py  test_bpsa_alias.py  test_compression.py  test_evolutive_solver_context.py  test_memory.py  test_models.py  test_monitoring.py
