[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bpsa"
version = "1.24.8"
description = "Beyond Python SmolAgents (BPSA) — a multi-language, multi-agent framework forked from HuggingFace smolagents."
authors = [
  { name="Joao Paulo Schwarz Schuler" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "huggingface-hub>=1.6.0",
  "requests>=2.32.3",
  "rich>=13.9.4",
  "jinja2>=3.1.4",
  "pillow>=10.0.1",  # Security fix for CVE-2023-4863: https://pillow.readthedocs.io/en/stable/releasenotes/10.0.1.html
  "python-dotenv",
  "ddgs>=9.0.0",  # DuckDuckGoSearchTool
  "markdownify>=0.14.1",  # VisitWebpageTool
  "python-slugify",
  "prompt_toolkit>=3.0.0", # CLI
  "mcpadapt>=0.1.13",  # Support structured output
  "mcp",
]

[project.optional-dependencies]
bedrock = [
  "boto3>=1.36.18"
]
blaxel = [
  "blaxel>=0.2.19",
  "websocket-client",
]
torch = [
  "torch",
  "torchvision",
  "numpy>=1.21.2",
]
audio = [
  "soundfile",
  "bpsa[torch]",
]
docker = [
  "docker>=7.1.0",
  "websocket-client",
]
e2b = [
  "e2b-code-interpreter>=1.0.3",
  "python-dotenv>=1.0.1",
]
gradio = [
  "gradio>=5.14.0",  # Sidebar component GH-797
]
litellm = [
  "litellm>=1.60.2",
]
# mcp backward compatibility
mcp = [
]
mlx-lm = [
  "mlx-lm",
]
modal = [
  "modal>=1.1.3",
  "websocket-client",
]
openai = [
  "openai>=1.58.1"
]
telemetry = [
  "arize-phoenix",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp",
  "openinference-instrumentation-smolagents>=0.1.15"  # Use new TokenUsage structure
]
toolkit = [
  "ddgs>=9.0.0",  # DuckDuckGoSearchTool
  "markdownify>=0.14.1",  # VisitWebpageTool
]
transformers = [
  "accelerate",
  "transformers>=5.3.0",
  "bpsa[torch]",
]
browser = [
  "playwright>=1.40.0",
]
vision = [
  "helium",
  "selenium",
]
dictation = [
  "voicelistener>=1.0.3",
]
vllm = [
  "vllm>=0.10.2",
  "torch"
]
all = [
  "bpsa[audio,blaxel,docker,e2b,gradio,litellm,mcp,mlx-lm,modal,openai,telemetry,toolkit,transformers,vision,dictation,bedrock]",
]
quality = [
  "ruff>=0.9.0",
]
test = [
  "ipython>=8.31.0", # for interactive environment tests
  "pandas>=2.2.3",
  "pytest>=8.1.0",
  "pytest-datadir",
  "pytest-timeout",  # For test_all_docs: @pytest.mark.timeout
  "python-dotenv>=1.0.1", # For test_all_docs
  "bpsa[all]",
  "rank-bm25", # For test_all_docs
  "Wikipedia-API>=0.8.1",
  "mlx[cpu]",  # GH-1588
]
dev = [
  "bpsa[quality,test]",
  "sqlalchemy", # for ./examples
]

[project.urls]
Homepage = "https://github.com/joaopauloschuler/beyond-python-smolagents"
Repository = "https://github.com/joaopauloschuler/beyond-python-smolagents"
Issues = "https://github.com/joaopauloschuler/beyond-python-smolagents/issues"

[tool.pytest.ini_options]
# Add the specified `OPTS` to the set of command line arguments as if they had been specified by the user.
addopts = "-sv --durations=0"

[tool.ruff]
line-length = 119
lint.ignore = [
  "F403", # undefined-local-with-import-star
  "E501", # line-too-long
]
lint.select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = [
  "E402", # module-import-not-at-top-of-file
]

[tool.ruff.lint.isort]
known-first-party = ["smolagents", "bpsa"]
lines-after-imports = 2

[tool.setuptools.package-data]
"smolagents.prompts" = ["*.yaml"]

[project.scripts]
smolagent = "smolagents.cli:main"
bpsa = "smolagents.bp_cli:main"
bptree = "smolagents.bp_tree_cli:main"
bpgrep = "smolagents.bp_grep_cli:main"
bppack = "smolagents.bp_pack_cli:main"
bpunpack = "smolagents.bp_unpack_cli:main"
bploc = "smolagents.bp_loc_cli:main"
bpdiff = "smolagents.bp_diff_cli:main"
bpsig = "smolagents.bp_sig_cli:main"
bppas = "smolagents.bp_pas_cli:main"
webagent = "smolagents.vision_web_browser:main"
ad-infinitum = "smolagents.bp_ad_infinitum:main"
